arrange bg_base_mains

--- a/app/src/main/res/layout/activity_tripcourse_select_country.xml
+++ b/app/src/main/res/layout/activity_tripcourse_select_country.xml
@@ -90,13 +90,13 @@
             android:id="@+id/tripcourse_select_country_select_complete_btn"
             android:layout_width="228dp"
             android:layout_height="43dp"
-            android:background="@drawable/drawable_custom_button_base"
+            android:background="@drawable/bg_base_main_1_fill"
             android:gravity="center"
             android:text="@string/tripcourse_select_complete"
             android:textSize="15sp"
             android:textColor="@color/white"
             android:fontFamily="@font/notosans_kr_bold"
-            android:padding="0dp"
+            android:includeFontPadding="false"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
