--- a/app/src/main/res/drawable/bg_base_main_4_empty.xml
+++ b/app/src/main/res/drawable/bg_base_main_4_empty.xml
@@ -5,7 +5,11 @@
     >
 
     <solid
-        android:color="@color/tripbook_main_1"
+        android:color="@color/transparent"
+        />
+
+    <corners
+        android:radius="15dp"
         />
 
     <padding
@@ -15,8 +19,9 @@
         android:bottom="0dp"
         />
 
-    <corners
-        android:radius="10dp"
+    <stroke
+        android:width="1dp"
+        android:color="@color/tripbook_main_4"
         />
 
 </shape>
