--- a/app/src/main/res/layout/activity_tripcourse_delete.xml
+++ b/app/src/main/res/layout/activity_tripcourse_delete.xml
@@ -84,12 +84,13 @@
                 android:id="@+id/tripcourse_delete_home_btn"
                 android:layout_width="264dp"
                 android:layout_height="43dp"
-                android:background="@drawable/drawable_custom_button_base"
+                android:background="@drawable/bg_base_main_1_fill"
                 android:gravity="center"
                 android:text="@string/tripcourse_delete_home"
                 android:textSize="15sp"
                 android:textColor="@color/white"
                 android:fontFamily="@font/notosans_kr_bold"
+                android:includeFontPadding="false"
                 android:padding="0dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
