--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#DFDFDF</color>
+    <color name="red">#FF7E7E</color>
     <color name="transparent">#00000000</color>
 
     <color name="tripbook_main_1">#FF007C32</color>
