add gmarket fonts, add red color, user_signup ongoing

--- a/app/src/main/res/layout/activity_user_signin.xml
+++ b/app/src/main/res/layout/activity_user_signin.xml
@@ -7,7 +7,7 @@
     <View
         android:id="@+id/signin_title_underscore_view"
         android:layout_width="5dp"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:background="@color/tripbook_main_1"
         android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toTopOf="@id/signin_email_background_iv"
@@ -20,11 +20,10 @@
         android:layout_marginStart="10dp"
         android:text="@string/app_slogan"
         android:textColor="@color/tripbook_main_1"
-        android:textSize="15sp"
-        android:fontFamily="@font/notosans_kr_light"
+        android:textSize="14sp"
+        android:fontFamily="@font/gmarket_sans_light"
         android:includeFontPadding="false"
         app:layout_constraintTop_toTopOf="@id/signin_title_underscore_view"
-        app:layout_constraintBottom_toTopOf="@id/signin_title_02_tv"
         app:layout_constraintStart_toStartOf="@id/signin_title_underscore_view"/>
 
     <TextView
@@ -35,9 +34,8 @@
         android:text="@string/app_name_uppercase"
         android:textColor="@color/tripbook_main_1"
         android:textSize="40sp"
-        android:fontFamily="@font/notosans_kr_bold"
+        android:fontFamily="@font/gmarket_sans_bold"
         android:includeFontPadding="false"
-        app:layout_constraintTop_toBottomOf="@id/signin_title_01_tv"
         app:layout_constraintBottom_toBottomOf="@id/signin_title_underscore_view"
         app:layout_constraintStart_toStartOf="@id/signin_title_underscore_view"/>
 
@@ -45,7 +43,7 @@
         android:id="@+id/signin_email_background_iv"
         android:layout_width="320dp"
         android:layout_height="50dp"
-        android:background="@drawable/signin_edittext_background"
+        android:background="@drawable/bg_signin_edittext"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +54,9 @@
         android:layout_width="280dp"
         android:layout_height="30dp"
         android:hint="@string/user_email"
-        android:textSize="16sp"
+        android:textSize="15sp"
+        android:fontFamily="@font/notosans_kr_regular"
+        android:includeFontPadding="false"
         android:background="@null"
         android:inputType="textEmailAddress"
         app:layout_constraintTop_toTopOf="@id/signin_email_background_iv"
@@ -69,7 +69,7 @@
         android:id="@+id/signin_password_background_iv"
         android:layout_width="320dp"
         android:layout_height="50dp"
-        android:background="@drawable/signin_edittext_background"
+        android:background="@drawable/bg_signin_edittext"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/signin_email_background_iv"
         app:layout_constraintBottom_toTopOf="@id/signin_signin_btn_iv"
@@ -81,7 +81,9 @@
         android:layout_width="280dp"
         android:layout_height="30dp"
         android:hint="@string/user_password"
-        android:textSize="16sp"
+        android:textSize="15sp"
+        android:fontFamily="@font/notosans_kr_regular"
+        android:includeFontPadding="false"
         android:background="@null"
         android:inputType="textPassword"
         app:layout_constraintTop_toTopOf="@id/signin_password_background_iv"
@@ -94,7 +96,7 @@
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/signin_signin_btn_background"
+        android:background="@drawable/bg_signin_btn"
         app:layout_constraintTop_toBottomOf="@id/signin_password_background_iv"
         app:layout_constraintBottom_toTopOf="@id/signin_signup_btn_tv"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,9 +107,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/user_signin"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:fontFamily="@font/notosans_kr_bold"
+        android:includeFontPadding="false"
         android:textColor="@color/white"
+        android:letterSpacing="0.2"
         app:layout_constraintTop_toTopOf="@+id/signin_signin_btn_iv"
         app:layout_constraintBottom_toBottomOf="@+id/signin_signin_btn_iv"
         app:layout_constraintStart_toStartOf="@+id/signin_signin_btn_iv"
@@ -117,10 +121,12 @@
         android:id="@+id/signin_signup_btn_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
         android:text="@string/user_signup"
-        android:textSize="16sp"
-        android:fontFamily="@font/notosans_kr_bold"
+        android:textSize="13sp"
+        android:fontFamily="@font/notosans_kr_medium"
+        android:includeFontPadding="false"
+        android:letterSpacing="0.2"
         app:layout_constraintTop_toBottomOf="@id/signin_signin_btn_iv"
         app:layout_constraintBottom_toTopOf="@id/signin_find_password_tv"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +139,7 @@
         android:layout_marginTop="100dp"
         android:text="@string/user_find_password"
         android:textSize="10sp"
-        android:fontFamily="@font/notosans_kr_regular"
+        android:fontFamily="@font/notosans_kr_medium"
         app:layout_constraintTop_toBottomOf="@id/signin_signup_btn_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
