--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?><!--최상위 레이아웃. DrawerLayout-->
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="end">
+    android:fitsSystemWindows="true">
 
     <!--메인 레이아웃(툴바, 메뉴바, 콘텐츠) -->
     <LinearLayout
@@ -15,11 +15,39 @@
         android:orientation="vertical">
 
         <!-- 툴바 -->
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/main_toolbar"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/transparent" />
+            android:layout_height="?attr/actionBarSize">
+
+            <ImageView
+                android:id="@+id/home_left_drawer_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_home_menu"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img_home_logo"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ImageView
+                android:id="@+id/home_right_drawer_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/btn_home_menu"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- 여행기록하기 메뉴바 -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -96,7 +124,6 @@
                 android:layout_height="40dp"
                 android:layout_gravity="bottom"/>
         </FrameLayout>
-
     </LinearLayout>
 
     <!--자식 레이아웃. Navigation Drawer-->
@@ -114,6 +141,5 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="end"
-        app:headerLayout="@layout/activity_main_right_drawer_header"
-        app:menu="@menu/activity_main_right_drawer" />
+        app:headerLayout="@layout/activity_main_right_drawer_header" />
 </androidx.drawerlayout.widget.DrawerLayout>
