--- a/app/src/main/res/layout/activity_main_right_drawer_header.xml
+++ b/app/src/main/res/layout/activity_main_right_drawer_header.xml
@@ -56,6 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="S E A R C H                                    "
+            android:inputType="text"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="12sp"
