--- a/app/src/main/res/layout/layout_topbar_base.xml
+++ b/app/src/main/res/layout/layout_topbar_base.xml
@@ -2,74 +2,64 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
+    android:paddingHorizontal="20dp"
     android:paddingTop="20dp"
-    android:paddingHorizontal="20dp">
+    android:paddingBottom="10dp">
 
     <ImageView
         android:id="@+id/topbar_back_ib"
         android:src="@drawable/btn_base_back_black"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/topbar_title_layout"
-        android:layout_marginTop="8dp"/>
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
         android:id="@+id/topbar_subbutton_ib"
         android:src="@drawable/btn_base_home"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/topbar_back_ib"
-        />
-
-    <LinearLayout
-        android:id="@+id/topbar_title_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="17dp"
-        >
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
-            android:id="@+id/topbar_title_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/topbar_title"
-            android:textSize="21sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/notosans_kr_bold"
-            android:includeFontPadding="false"
-            android:layout_marginBottom="8dp"
-            />
-        <TextView
-            android:id="@+id/topbar_subtitle_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/topbar_subtitle"
-            android:textSize="13sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/notosans_kr_regular"
-            android:includeFontPadding="false"
-            android:visibility="visible"/>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/topbar_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/topbar_title"
+        android:textSize="17sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/notosans_kr_bold"
+        android:includeFontPadding="false"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/topbar_subtitle_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/topbar_subtitle"
+        android:textSize="13sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/notosans_kr_regular"
+        android:includeFontPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/topbar_title_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray"
         android:layout_marginHorizontal="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
