--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#DFDFDF</color>
     <color name="transparent">#00000000</color>
+    <color name="red">#FF0000</color>
 
     <color name="tripbook_main_1">#FF007C32</color>
     <color name="tripbook_main_2">#B3007C32</color>
