add splash activity, tedpermission

--- a/app/src/main/res/layout/activity_tripcourse.xml
+++ b/app/src/main/res/layout/activity_tripcourse.xml
@@ -8,11 +8,7 @@
     <!--상단 바-->
     <include
         layout="@layout/layout_topbar_base"
-        android:id="@+id/tripcourse_topbar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        android:id="@+id/tripcourse_topbar_layout" />
 
     <!--메인 앨범 창-->
     <ScrollView
