--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="20dp"
     android:orientation="vertical">
 
     <include
@@ -279,7 +278,22 @@
                 android:layout_marginTop="20dp"
                 android:background="@color/gray" />
 
-            <include layout="@layout/layout_nextstep_base" />
+            <TextView
+                android:id="@+id/trip_next_step_btn_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_base_main_1_fill"
+                android:text="다음 단계로 이동"
+                android:textSize="15sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/notosans_kr_regular"
+                android:includeFontPadding="false"
+                android:layout_gravity="center"
+                android:paddingStart="35dp"
+                android:paddingEnd="35dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:layout_marginTop="20dp"/>
 
         </LinearLayout>
     </ScrollView>
