--- a/app/src/main/res/layout/layout_topbar_base.xml
+++ b/app/src/main/res/layout/layout_topbar_base.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingHorizontal="20dp"
     android:paddingTop="20dp"
     android:paddingBottom="10dp">
@@ -30,7 +30,7 @@
         android:id="@+id/topbar_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/topbar_title"
+        tools:text="@string/topbar_title"
         android:textSize="17sp"
         android:textColor="@color/black"
         android:fontFamily="@font/notosans_kr_bold"
@@ -45,7 +45,7 @@
         android:id="@+id/topbar_subtitle_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/topbar_subtitle"
+        tools:text="@string/topbar_subtitle"
         android:textSize="13sp"
         android:textColor="@color/black"
         android:fontFamily="@font/notosans_kr_regular"
