--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,9 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
         <!-- Customize your theme here. -->
-        //status bar, navigation 반투명하게
+        //status bar 반투명하게
         <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
 
         //상태바까지 view를 보여주도록
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
