--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,10 +9,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#DFDFDF</color>
     <color name="light_red">#FF7E7E</color>
-    <color name="transparent">#00000000</color>
     <color name="red">#FF0000</color>
-
-<!--사용 취소    <color name="tripbook_sub">#80FFB800</color>-->
+    <color name="transparent">#00000000</color>
+    <color name="kakao_background">#FEE500</color>
+    <color name="kakao_label">#55000000</color>
 
     <color name="tripbook_main_1">#007C32</color>
     <color name="tripbook_main_2">#4DA470</color>
