--- a/app/src/main/res/layout/activity_tripcourse_select_country.xml
+++ b/app/src/main/res/layout/activity_tripcourse_select_country.xml
@@ -29,7 +29,7 @@
             android:layout_height="60dp"
             android:orientation="vertical"
             android:gravity="center"
-            android:background="@drawable/bg_base_main_1_empty"
+            android:background="@drawable/bg_base_main_4_empty"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -77,15 +77,15 @@
         app:layout_constraintTop_toBottomOf="@id/tripcourse_select_country_explain_layout"
         app:layout_constraintBottom_toTopOf="@id/tripcourse_select_country_select_complete_layout"
         >
-        <fragment
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/tripcourse_select_country_map"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+<!--        <fragment-->
+<!--            xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--            xmlns:tools="http://schemas.android.com/tools"-->
+<!--            android:id="@+id/tripcourse_select_country_map"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
 
-            tools:context=".MapsActivity"
-            android:name="com.google.android.gms.maps.SupportMapFragment" />
+<!--            tools:context=".MapsActivity"-->
+<!--            android:name="com.google.android.gms.maps.SupportMapFragment" />-->
     </View>
 
     <!--선택 완료 바-->
