add numberpicker, completed theme select, fix home ui

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,16 +37,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
-
-            <ImageView
-                android:id="@+id/home_right_drawer_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/btn_home_menu"
-                android:layout_marginEnd="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- 여행기록하기 메뉴바 -->
@@ -54,7 +44,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_home_trip_record"
-            android:elevation="30dp">
+            android:elevation="30dp"
+            android:paddingHorizontal="37dp"
+            android:paddingVertical="21dp">
 
             <TextView
                 android:id="@+id/main_user_name_tv"
@@ -63,6 +55,8 @@
                 android:text="OOO님의 추억"
                 android:textColor="@color/black"
                 android:textSize="12sp"
+                android:fontFamily="@font/notosans_kr_medium"
+                android:includeFontPadding="false"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,36 +64,58 @@
                 android:id="@+id/main_user_trip_count_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/notosans_kr_bold"
                 android:text="15"
                 android:textColor="@color/tripbook_main_1"
-                android:textSize="22sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="24sp"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:includeFontPadding="false"
+                app:layout_constraintTop_toBottomOf="@id/main_user_name_tv"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/notosans_kr_medium"
                 android:text="개"
                 android:textColor="@color/black"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@id/main_user_trip_count_tv"
+                android:fontFamily="@font/notosans_kr_medium"
+                android:includeFontPadding="false"
+                android:layout_marginBottom="5dp"
                 app:layout_constraintStart_toEndOf="@id/main_user_trip_count_tv"
-                app:layout_constraintTop_toTopOf="@id/main_user_trip_count_tv" />
+                app:layout_constraintBottom_toBottomOf="@id/main_user_trip_count_tv"/>
 
-            <TextView
-                android:id="@+id/main_content_record_btn_tv"
-                android:layout_width="151dp"
-                android:layout_height="32dp"
-                android:layout_marginBottom="20dp"
+            <LinearLayout
+                android:layout_width="147dp"
+                android:layout_height="34dp"
+                android:orientation="horizontal"
                 android:background="@drawable/bg_base_main_1_fill"
-                android:text="+ 여행 기록하러 가기"
-                android:textColor="@color/white"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="+"
+                    android:textSize="20sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/notosans_kr_light"
+                    android:includeFontPadding="false"/>
+
+                <TextView
+                    android:id="@+id/main_content_record_btn_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="여행 기록하러 가기"
+                    android:textSize="12sp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/notosans_kr_bold"
+                    android:includeFontPadding="false"
+                    android:layout_marginStart="5dp"/>
+
+            </LinearLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -134,12 +150,4 @@
         android:layout_gravity="start"
         app:headerLayout="@layout/activity_main_left_drawer_header"
         app:menu="@menu/activity_main_left_drawer" />
-
-    <!--자식 레이아웃. Navigation Drawer-->
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/main_right_navigation_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="end"
-        app:headerLayout="@layout/activity_main_right_drawer_header" />
 </androidx.drawerlayout.widget.DrawerLayout>
