--- a/app/src/main/res/drawable/bg_base_main_1_fill.xml
+++ b/app/src/main/res/drawable/bg_base_main_1_fill.xml
@@ -3,18 +3,9 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/tripbook_main_1"
-        />
+        android:color="@color/tripbook_main_1" />
 
     <corners
-        android:radius="10dp"
-        />
-
-    <padding
-        android:top="5dp"
-        android:left="10dp"
-        android:right="10dp"
-        android:bottom="5dp"
-        />
+        android:radius="10dp" />
 
 </shape>
