--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#EDEDED</color>
     <color name="gray">#DFDFDF</color>
+    <color name="graytext">#4C000000</color>
+    <color name="dark_gray">#B3B3B3</color>
     <color name="light_red">#FF7E7E</color>
     <color name="transparent">#00000000</color>
     <color name="red">#FF0000</color>
