--- a/app/src/main/res/layout/activity_tripcourse_select_country.xml
+++ b/app/src/main/res/layout/activity_tripcourse_select_country.xml
@@ -70,10 +70,11 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!--여행 지역/도시 선택 메인 창-->
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="80dp"
+        android:padding="40dp"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/tripcourse_select_country_explain_layout"
         app:layout_constraintBottom_toTopOf="@id/tripcourse_select_country_select_complete_layout"
         >
@@ -83,10 +84,23 @@
 <!--            android:id="@+id/tripcourse_select_country_map"-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="match_parent"-->
-
 <!--            tools:context=".MapsActivity"-->
 <!--            android:name="com.google.android.gms.maps.SupportMapFragment" />-->
-    </View>
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/tripcourse_select_country_search_searchView"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            app:queryHint="검색하려는 장소를 입력해주세요"/>
+
+        <fragment
+            android:id="@+id/tripcourse_select_country_map"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
+            class="com.google.android.gms.maps.MapFragment"
+            />
+    </LinearLayout>
 
     <!--선택 완료 바-->
     <androidx.constraintlayout.widget.ConstraintLayout
