--- a/app/src/main/res/layout/dialog_base.xml
+++ b/app/src/main/res/layout/dialog_base.xml
@@ -8,8 +8,8 @@
     android:layout_gravity="center">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="330dp"
-        android:layout_height="190dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/bg_dialog_base"
         android:paddingVertical="15dp"
         android:paddingHorizontal="20dp"
@@ -22,7 +22,7 @@
             android:id="@+id/dialog_base_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textColor="@color/black"
             android:fontFamily="@font/notosans_kr_bold"
             android:includeFontPadding="false"
@@ -47,23 +47,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
+            android:textSize="12sp"
             android:fontFamily="@font/notosans_kr_regular"
             android:includeFontPadding="false"
             android:gravity="center"
+            android:layout_marginTop="15dp"
+            android:drawablePadding="10dp"
             app:layout_constraintTop_toBottomOf="@id/dialog_base_view"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/dialog_base_ok_btn_tv"
-            tools:text="메세지 내용을 입력주세요."/>
+            tools:text="메세지 내용을 입력주세요."
+            app:drawableTopCompat="@null" />
 
         <TextView
             android:id="@+id/dialog_base_ok_btn_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
+            android:textSize="12sp"
             android:fontFamily="@font/notosans_kr_bold"
             android:gravity="center"
             android:background="@drawable/bg_base_main_1_fill"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/dialog_base_message_tv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
