--- a/app/src/main/res/layout/layout_topbar_base.xml
+++ b/app/src/main/res/layout/layout_topbar_base.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="80dp"
     android:paddingHorizontal="20dp"
-    android:paddingTop="20dp"
-    android:paddingBottom="10dp">
+    android:layout_marginTop="10dp">
 
     <ImageView
         android:id="@+id/topbar_back_ib"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/btn_base_back_black"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
         android:id="@+id/topbar_subbutton_ib"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/btn_base_home"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -35,7 +34,6 @@
         android:textColor="@color/black"
         android:fontFamily="@font/notosans_kr_bold"
         android:includeFontPadding="false"
-        android:layout_marginBottom="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="@string/topbar_subtitle"
-        android:textSize="13sp"
+        android:textSize="10sp"
         android:textColor="@color/black"
         android:fontFamily="@font/notosans_kr_regular"
         android:includeFontPadding="false"
@@ -58,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="3dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
