--- a/app/src/main/res/layout/activity_tripcourse_select_country.xml
+++ b/app/src/main/res/layout/activity_tripcourse_select_country.xml
@@ -9,12 +9,7 @@
     <!--상단 바-->
     <include
         layout="@layout/layout_topbar_base"
-        android:id="@+id/tripcourse_select_country_topbar_layout"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/tripcourse_select_country_topbar_layout"/>
 
     <!--설명 창-->
     <androidx.constraintlayout.widget.ConstraintLayout
