--- a/app/src/main/res/layout/layout_topbar_base.xml
+++ b/app/src/main/res/layout/layout_topbar_base.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:paddingHorizontal="20dp"
-    android:layout_marginTop="10dp">
+    android:layout_height="85dp"
+    android:paddingHorizontal="20dp">
 
     <ImageView
         android:id="@+id/topbar_back_ib"
