--- a/app/src/main/res/layout/activity_user_signin.xml
+++ b/app/src/main/res/layout/activity_user_signin.xml
@@ -6,44 +6,76 @@
 
     <View
         android:id="@+id/signin_title_underscore_view"
-        android:layout_width="5dp"
-        android:layout_height="60dp"
+        android:layout_width="40dp"
+        android:layout_height="3dp"
         android:background="@color/tripbook_main_1"
-        android:layout_marginBottom="80dp"
-        app:layout_constraintBottom_toTopOf="@id/signin_signin_btn_iv"
-        app:layout_constraintStart_toStartOf="@id/signin_signin_btn_iv"/>
+        app:layout_constraintBottom_toTopOf="@id/signin_title_01_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/signin_title_01_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
         android:text="@string/app_slogan"
         android:textColor="@color/tripbook_main_1"
-        android:textSize="14sp"
+        android:textSize="10sp"
         android:fontFamily="@font/gmarket_sans_light"
         android:includeFontPadding="false"
-        app:layout_constraintTop_toTopOf="@id/signin_title_underscore_view"
-        app:layout_constraintStart_toStartOf="@id/signin_title_underscore_view"/>
+        android:layout_marginTop="6dp"
+        app:layout_constraintTop_toBottomOf="@id/signin_title_underscore_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/signin_title_02_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="@string/app_name_uppercase"
-        android:textColor="@color/tripbook_main_1"
-        android:textSize="40sp"
+        android:layout_marginTop="2dp"
         android:fontFamily="@font/gmarket_sans_bold"
         android:includeFontPadding="false"
-        app:layout_constraintBottom_toBottomOf="@id/signin_title_underscore_view"
-        app:layout_constraintStart_toStartOf="@id/signin_title_underscore_view"/>
+        android:text="@string/app_name_uppercase"
+        android:textColor="@color/tripbook_main_1"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signin_title_01_tv" />
+
+    <ImageView
+        android:id="@+id/signin_book_iv"
+        android:layout_width="126dp"
+        android:layout_height="126dp"
+        android:background="@drawable/img_home_book"
+        android:layout_marginTop="88dp"
+        app:layout_constraintTop_toBottomOf="@id/signin_title_02_tv"
+        app:layout_constraintBottom_toTopOf="@id/signin_guide_message_1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/signin_guide_message_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/user_signin_guide_message_1"
+        android:textSize="14sp"
+        android:textAlignment="center"
+        android:fontFamily="@font/notosans_kr_bold"
+        android:includeFontPadding="false"
+        android:textColor="@color/black_cc"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="82dp"
+        app:layout_constraintTop_toBottomOf="@id/signin_book_iv"
+        app:layout_constraintBottom_toTopOf="@id/signin_signin_btn_iv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <ImageView
         android:id="@+id/signin_signin_btn_iv"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:background="@drawable/bg_signin_btn"
+        android:layout_marginTop="214dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,5 +89,46 @@
         app:layout_constraintBottom_toBottomOf="@+id/signin_signin_btn_iv"
         app:layout_constraintStart_toStartOf="@+id/signin_signin_btn_iv"
         app:layout_constraintEnd_toEndOf="@+id/signin_signin_btn_iv"/>
+
+    <View
+        android:id="@+id/signin_no_account_guide_view"
+        android:layout_width="312dp"
+        android:layout_height="78dp"
+        android:background="@drawable/bg_signin_rectangle_radius_20"
+        android:padding="14dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/signin_signin_btn_iv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/signin_guide_message_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/user_signin_guide_message_2"
+        android:textSize="11sp"
+        android:textColor="@color/black_99"
+        android:fontFamily="@font/notosans_kr_bold"
+        android:includeFontPadding="false"
+        app:layout_constraintTop_toTopOf="@id/signin_no_account_guide_view"
+        app:layout_constraintBottom_toTopOf="@id/signin_guide_message_3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/signin_guide_message_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/user_signin_guide_message_3"
+        android:textSize="10sp"
+        android:textColor="@color/black_66"
+        android:fontFamily="@font/notosans_kr_medium"
+        android:includeFontPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/signin_guide_message_2"
+        app:layout_constraintBottom_toBottomOf="@id/signin_no_account_guide_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
