--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black_cc">#CC000000</color>
+    <color name="black_99">#99000000</color>
+    <color name="black_66">#66000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#EDEDED</color>
     <color name="gray">#DFDFDF</color>
